--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,11 @@
 [phases.build]
-cmds = ["pip install -r requirements.txt"]
+cmds = ["pip install -r requirements.txt", "mkdir -p staticfiles"]
 
 [phases.setup]
 nixPkgs = ["python311"]
 
 [start]
-cmd = "python manage.py migrate --noinput && gunicorn municipal.wsgi --bind 0.0.0.0:$PORT"
+cmd = "python manage.py migrate --noinput && python manage.py collectstatic --noinput && gunicorn municipal.wsgi:application --bind 0.0.0.0:$PORT"
 
 [variables]
 DISABLE_COLLECTSTATIC = "1"
